tests/paczka1/fuzzy1/70771394.err
Error in line 1: rkO9csI S592 34,6
Error in line 7: rkO9csI S845 80,1
Error in line 13: rkO9csI A86 74,5
Error in line 11: AzarWD S845 65,9
Error in line 28: c2RVToeHFv S592 77,6
Error in line 31: c2RVToeHFv S845 47,4
